// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateCanonicalUrlLinkTags should generate a canonical link tag with locale if *not* en-US 1`] = `
Array [
  <link
    href="http://www.mock-base-url.com/fr-FR/mockroute"
    rel="canonical"
/>,
]
`;

exports[`generateCanonicalUrlLinkTags should generate a canonical link tag without locale if en-US 1`] = `
Array [
  <link
    href="http://www.mock-base-url.com/mockroute"
    rel="canonical"
/>,
]
`;

exports[`generateCanonicalUrlLinkTags should generate a x-default url that is baseUrl + route 1`] = `
Array [
  <link
    href="http://www.mock-base-url.com/mockroute"
    hreflang="x-default"
    rel="alternate"
/>,
]
`;

exports[`generateCanonicalUrlLinkTags should generate locale <link />s for all locales 1`] = `
Array [
  <link
    href="http://www.mock-base-url.com/mockroute"
    hreflang="en"
    rel="alternate"
/>,
  <link
    href="http://www.mock-base-url.com/de-DE/mockroute"
    hreflang="de-DE"
    rel="alternate"
/>,
  <link
    href="http://www.mock-base-url.com/en-AU/mockroute"
    hreflang="en-AU"
    rel="alternate"
/>,
  <link
    href="http://www.mock-base-url.com/es/mockroute"
    hreflang="es"
    rel="alternate"
/>,
  <link
    href="http://www.mock-base-url.com/es-ES/mockroute"
    hreflang="es-ES"
    rel="alternate"
/>,
  <link
    href="http://www.mock-base-url.com/fr-FR/mockroute"
    hreflang="fr-FR"
    rel="alternate"
/>,
  <link
    href="http://www.mock-base-url.com/it-IT/mockroute"
    hreflang="it-IT"
    rel="alternate"
/>,
  <link
    href="http://www.mock-base-url.com/ja-JP/mockroute"
    hreflang="ja-JP"
    rel="alternate"
/>,
  <link
    href="http://www.mock-base-url.com/ko-KR/mockroute"
    hreflang="ko-KR"
    rel="alternate"
/>,
  <link
    href="http://www.mock-base-url.com/nl-NL/mockroute"
    hreflang="nl-NL"
    rel="alternate"
/>,
  <link
    href="http://www.mock-base-url.com/pt-BR/mockroute"
    hreflang="pt-BR"
    rel="alternate"
/>,
  <link
    href="http://www.mock-base-url.com/pl-PL/mockroute"
    hreflang="pl-PL"
    rel="alternate"
/>,
  <link
    href="http://www.mock-base-url.com/ru-RU/mockroute"
    hreflang="ru-RU"
    rel="alternate"
/>,
  <link
    href="http://www.mock-base-url.com/th-TH/mockroute"
    hreflang="th-TH"
    rel="alternate"
/>,
  <link
    href="http://www.mock-base-url.com/tr-TR/mockroute"
    hreflang="tr-TR"
    rel="alternate"
/>,
  <link
    href="http://www.mock-base-url.com/mockroute"
    hreflang="x-default"
    rel="alternate"
/>,
  <link
    href="http://www.mock-base-url.com/mockroute"
    rel="canonical"
/>,
]
`;
